# UDL2024

./: .gitignore  README.md  hyper_params.json  pyproject.toml
src/continual_learning/: evaluation.py  load_data.py  run_experiments.py  utils.py
src/continual_learning/ewc/: ewc_loss.py  ewc_models.py  run_ewc_multihead.py  run_ewc_singlehead.py
src/continual_learning/vcl/: kl_divergence.py  run_vcl_multihead.py  run_vcl_singlehead.py  vcl_models.py
