[tool.poetry]
name = "continual_learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "24.3.0"
click = "8.1.7"
contourpy = "1.2.0"
cycler = "0.12.1"
exceptiongroup = "1.2.0"
filelock = "3.13.1"
fonttools = "4.50.0"
fsspec = "2024.3.1"
importlib_resources = "6.4.0"
iniconfig = "2.0.0"
Jinja2 = "3.1.3"
kiwisolver = "1.4.5"
MarkupSafe = "2.1.5"
matplotlib = "3.5.0"
mpmath = "1.3.0"
mypy-extensions = "1.0.0"
networkx = "3.2.1"
numpy = "1.26.4"
packaging = "24.0"
pathspec = "0.12.1"
pillow = "10.2.0"
platformdirs = "4.2.0"
pluggy = "1.4.0"
pyparsing = "3.1.2"
pytest = "8.1.1"
python-dateutil = "2.9.0.post0"
setuptools-scm = "8.0.4"
six = "1.16.0"
sympy = "1.12"
tomli = "2.0.1"
torch = "2.2.1"
torch-vision = "0.1.6.dev0"
tqdm = "4.66.2"
typing_extensions = "4.10.0"
zipp = "3.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
